# aqa_pw_project

./: .env  .env.example  .gitignore  AGENTS.md  PROJECT_GUIDE.md  README.md  fix-imports-commit.txt  pyproject.toml
.ai/memory/business/: README.md
.ai/memory/design/: 2026-05-08_design-system-v1.md  README.md
.ai/memory/iterations/: 2026-05-12_18-26_ci-final-fixes.md  2026-05-12_critical-components-implementation.md  2026-05-12_documentation-unification.md  README.md  [ПАМЯТЬ]_сессия_исправление_ci.md
.ai/memory/tech/: 2026-05-10_auth-jwt-rls-implementation.md  2026-05-10_infra-review-sprint1.md  2026-05-12_ci-pipeline-fixes.md  2026-05-12_playwright-qa-framework-setup.md
.ai_context/: 01_system_prompt.md  02_knowledge_pack.md  03_session_starter.md  04_memory_log.md  05_quick_ref.md
.cursor/prompts/: README.md
.github/workflows/: ci.yml  e2e.yml
scripts/: tms_reporter.py
src/api/: clients.py
src/config/: settings.py
src/db/: engine.py
src/pages/: __init__.py  base_component.py
src/utils/: __init__.py  logger.py
tests/: Qwen_python_20260512_dr6kl0c88.py  conftest.py
tests/components/: __init__.py  base_component.py  test_components.py
tests/e2e/: test_smoke.py
tests/fixtures/: factories.py
tests/integration/: test_integration.py
