[project]
name = "qa-playwright-framework"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0",
    "pytest>=8.3.0",
    "pytest-playwright>=0.5.0",
    "pytest-xdist>=3.6.0",
    "pytest-rerunfailures>=14.0",
    "allure-pytest>=2.13.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "factory-boy>=3.3.0",
    "structlog>=24.4.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "mypy>=1.13.0", "pre-commit>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --strict-markers --tracing=retain-on-failure"
markers = ["smoke", "regression", "api", "e2e", "flaky"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]
select = ["E", "F", "I", "UP", "B", "SIM", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true